# seele-review

./: .env.example  LICENSE  Pipfile  README.md  README_EN.md  README_JA.md  ai-gen.py  gpt.py  main.py  pyproject.toml  qwen.py
app/: cli.py  config.py  constants.py  loader.py  main.py
app/locales/: en.json  ja.json  zh.json
app/prompt/: prompt-en.txt  prompt-ja.txt  prompt-zh.txt
app/routers/: github.py  gitlab.py
app/schemas/: gitlab.py
app/schemas/agent/: review.py
app/schemas/github/: pull_request.py  pull_request_diff.py  pull_request_object.py
app/schemas/gitlab/: merge_request.py  merge_request_diff.py  merge_request_object.py
app/services/: github.py  gitlab.py
app/services/agent/: agent.py  utils.py
app/services/notification/: __init__.py  lark.py  slack.py
app/services/patch/: github.py  gitlab.py  utils.py
app/services/prompt/: prompt.py
app/services/publish/: github.py  gitlab.py
app/utils/: i18n.py  token.py
prompt/: prompt-en.txt
